<resources>
    <string name="app_name">HealthX</string>
    <string name="hello_blank_fragment">Xin chào</string>
    <string name="reminder_text">%1$s: %2$s viên</string>
    <string name="pill_time_reminders_format">%1$s lúc %2$s</string>
    <string name="it_is_time_to_take">Đã đến giờ uống %1$s viên!</string>
    <string name="dropdown_label">Tên bệnh:</string>
    <string name="disease_name">Tên bệnh</string>
    <string name="specialization">Chuyên khoa</string>
    <string name="mailTo">mailto:22028135@vnu.edu.vn?Subject=HealthX%20Android%20application%20feedback%20main&amp;Body=Phản%20hồi%20của%20bạn%20rất%20quan%20trọng%20đối%20với%20chúng%20tôi!</string>
    <string name="situation">Tình trạng</string>
    <string name="cardiologist">Bác sĩ tim mạch</string>
    <string name="dentist">Nha sĩ</string>
    <string name="ent_specialist">Bác sĩ tai mũi họng</string>
    <string name="obstetrician_gynaecologist">Bác sĩ sản phụ khoa</string>
    <string name="orthopaedic_surgeon">Bác sĩ chỉnh hình</string>
    <string name="psychiatrists">Bác sĩ tâm thần</string>
    <string name="radiologist">Bác sĩ X-quang</string>
    <string name="pulmonologist">Bác sĩ phổi</string>
    <string name="neurologist">Bác sĩ thần kinh</string>
    <string name="allergists">Bác sĩ dị ứng</string>
    <string name="gastroenterologists">Bác sĩ tiêu hóa</string>
    <string name="doctors">Bác sĩ</string>
    <string name="category">Danh mục</string>
    <string-array name="all_specialists">
        <item>Tất cả</item>
        <item>Bác sĩ tim mạch</item>
        <item>Nha sĩ</item>
        <item>Bác sĩ tai mũi họng</item>
        <item>Bác sĩ sản phụ khoa</item>
        <item>Bác sĩ chỉnh hình</item>
        <item>Bác sĩ tâm thần</item>
        <item>Bác sĩ X-quang</item>
        <item>Bác sĩ phổi</item>
        <item>Bác sĩ thần kinh</item>
        <item>Bác sĩ dị ứng</item>
        <item>Bác sĩ chỉnh hình</item>
        <item>Bác sĩ tiêu hóa</item>
    </string-array>
    <string-array name="dropdown_items">
        <item>Sốt</item>
        <item>Cảm lạnh</item>
        <item>Tiêu chảy</item>
        <item>Dị ứng</item>
        <item>Đau dạ dày</item>
    </string-array>
    <string name="title_activity_summary">Tóm tắt hoạt động</string>
    <string name="first_fragment_label">Fragment đầu tiên</string>
    <string name="second_fragment_label">Fragment thứ hai</string>
    <string name="next">Tiếp theo</string>
    <string name="previous">Quay lại</string>
    <string name="press_once_again_to_exit">Nhấn lần nữa để thoát</string>
    <string name="disease_not_sure">Không chắc chắn</string>
    <string name="disease_high_blood_pressure">Cao huyết áp</string>
    <string name="disease_high_cholesterol">Cholesterol cao</string>
    <string name="disease_angina">Đau thắt ngực</string>
    <string name="disease_heart_rhythm_disorders">Rối loạn nhịp tim</string>
    <string name="disease_atrial_fibrillation">Rung nhĩ</string>
    <string name="disease_tooth_decay">Sâu răng</string>
    <string name="disease_gum_disease">Bệnh nướu răng</string>
    <string name="disease_cracked_teeth">Răng nứt hoặc gãy</string>
    <string name="disease_root_infection">Nhiễm trùng chân răng</string>
    <string name="disease_tooth_loss">Mất răng</string>
    <string name="disease_hearing_problems">Vấn đề về thính giác</string>
    <string name="disease_allergies">Dị ứng</string>
    <string name="disease_nasal_congestion">Nghẹt mũi</string>
    <string name="disease_tonsil_infections">Viêm amidan</string>
    <string name="disease_enlarged_tonsils">Amidan phì đại</string>
    <string name="disease_pregnancy_bleeding">Chảy máu khi mang thai</string>
    <string name="disease_female_infertility">Vô sinh nữ</string>
    <string name="disease_bipolar_disorder">Rối loạn lưỡng cực</string>
    <string name="disease_depression">Trầm cảm</string>
    <string name="disease_eating_disorder">Rối loạn ăn uống</string>
    <string name="disease_mood_disorders">Rối loạn tâm trạng</string>
    <string name="disease_panic_disorder">Rối loạn hoảng sợ</string>
    <string name="disease_sleep_disorders">Rối loạn giấc ngủ</string>
    <string name="disease_heart_disease_pregnancy">Bệnh tim khi mang thai</string>
    <string name="disease_menopause">Mãn kinh</string>
    <string name="disease_menstrual_cramps">Đau bụng kinh</string>
    <string name="disease_miscarriage">Sảy thai</string>
    <string name="disease_ovarian_cysts">U nang buồng trứng</string>
    <string name="disease_vaginal_bleeding">Chảy máu âm đạo</string>
    <string name="disease_bone_fractures">Gãy xương</string>
    <string name="disease_muscle_strains">Căng cơ</string>
    <string name="disease_joint_back_pain">Đau khớp hoặc lưng</string>
    <string name="disease_injuries_tendons_ligaments">Chấn thương gân hoặc dây chằng</string>
    <string name="disease_limb_abnormalities">Dị tật chi</string>
    <string name="disease_bone_cancer">Ung thư xương</string>
    <string name="disease_alcohol_use_disorder">Rối loạn sử dụng rượu</string>
    <string name="disease_alzheimers">Bệnh Alzheimer</string>
    <string name="disease_anxiety_disorders">Rối loạn lo âu</string>
    <string name="disease_brain_tumor">U não</string>
    <string name="disease_breast_cancer">Ung thư vú</string>
    <string name="disease_kidney_stones">Sỏi thận</string>
    <string name="disease_liver_tumors">U gan</string>
    <string name="condition_severe_pain">Đau nặng</string>
    <string name="condition_mild_pain">Đau nhẹ</string>
    <string name="condition_no_pain">Không đau</string>
    <string name="book_an_appointment">Đặt lịch hẹn</string>
    <string name="please_upload_your_prescription_in_settings_tab">Vui lòng tải lên đơn thuốc của bạn trong tab cài đặt</string>
    <string name="want_to_book_an_appointment">Bạn muốn đặt lịch hẹn?</string>
    <string name="book">Đặt lịch</string>
    <string name="doctor_s_name_email_or_phone">Tên, email hoặc số điện thoại của bác sĩ</string>
    <string name="appointment_summary">Tóm tắt lịch hẹn</string>
    <string name="successfully_booked_an_appointment">Đặt lịch hẹn thành công</string>
    <string name="back_to_home">Về trang chủ</string>
    <string name="please_fill_the_form_below">Vui lòng điền vào mẫu dưới đây</string>
    <string name="select_time">Chọn giờ</string>
    <string name="select_date">Chọn ngày</string>
    <string name="confirm_your_appointment">Xác nhận lịch hẹn của bạn</string>
    <string name="note_you_must_enter_the_correct_information_entering_wrong_information_might_lead_to_cancellation_of_your_future_appointments">Lưu ý: Bạn phải nhập thông tin chính xác. Nhập sai thông tin có thể dẫn đến việc hủy các lịch hẹn trong tương lai của bạn.</string>
    <string name="mon_fri_09_00_21_00">Thứ 2 - Thứ 6 09:00 - 21:00</string>
    <string name="working_hours">Giờ làm việc</string>
    <string name="your_appointment">Lịch hẹn của bạn</string>
    <string name="patient_queue">Hàng đợi bệnh nhân</string>
    <string name="settings">Cài đặt</string>
    <string name="configure_changes">Cấu hình thay đổi</string>
    <string name="blood_pressure">Huyết áp</string>
    <string name="add_data">Thêm dữ liệu</string>
    <string name="biological_reference_80_120">Tham chiếu sinh học: 80-120</string>
    <string name="min_loading_max_loading">Tối thiểu: Đang tải, Tối đa: Đang tải</string>
    <string name="sugar_fasting">Đường huyết lúc đói</string>
    <string name="biological_reference_70_100">Tham chiếu sinh học: 70-100</string>
    <string name="sugar_pp">Đường huyết sau ăn</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="rate_user">Đánh giá người dùng</string>
    <string name="submit_rating">Gửi đánh giá</string>
    <string name="dispute_a_rating">Khiếu nại đánh giá</string>
    <string name="report_any_unfair_or_inaccurate_ratings_you_have_received_we_will_review_your_report_and_take_appropriate_action">Báo cáo bất kỳ đánh giá không công bằng hoặc không chính xác mà bạn đã nhận được. Chúng tôi sẽ xem xét báo cáo của bạn và thực hiện hành động thích hợp.</string>
    <string name="enter_your_title_here">Nhập tiêu đề của bạn ở đây *</string>
    <string name="reason_for_dispute">Lý do khiếu nại *</string>
    <string name="submit_dispute">Gửi khiếu nại</string>
    <string name="enter_your_comment_here_optional">Nhập bình luận của bạn ở đây (tùy chọn)</string>
    <string name="create_or_edit_your_upi">Tạo hoặc chỉnh sửa UPI của bạn</string>
    <string name="upi_manager">Quản lý UPI</string>
    <string name="add_prescription">Thêm đơn thuốc</string>
    <string name="select_prescription">Chọn đơn thuốc</string>
    <string name="upload_file">Tải lên tệp</string>
    <string name="file_title">Tiêu đề tệp</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="profile">Hồ sơ</string>
    <string name="optional">Tùy chọn</string>
    <string name="search">Tìm kiếm</string>
    <string name="register">Đăng ký</string>
    <string name="create_a_new_account">Tạo tài khoản mới</string>
    <string name="password_hint">***************</string>
    <string name="phone_number_hint">+84 987654321</string>
    <string name="email_hint">johndoe123@gmail.com</string>
    <string name="email">Email</string>
    <string name="name">Tên</string>
    <string name="name_hint">Nguyễn Văn A</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="next_step">Bước tiếp theo</string>
    <string name="already_have_an_account">Đã có tài khoản?</string>
    <string name="login_text">Đăng nhập</string>
    <string name="profile_details">Chi tiết hồ sơ</string>
    <string name="address_hint">42/C Đê La Thành, Hà Nội - XXXXXX</string>
    <string name="is_doctor_hint">Không, tôi không phải là Bác sĩ</string>
    <string name="are_you_a_doctor">Bạn có phải là Bác sĩ không?</string>
    <string name="address">Địa chỉ</string>
    <string name="specialization_hint">Ví dụ: Bác sĩ tim mạch</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="your_database_was_created">Cơ sở dữ liệu của bạn đã được tạo</string>
    <string name="account_creation_failed">Tạo tài khoản thất bại</string>
    <string name="database_creation_failed">Tạo cơ sở dữ liệu thất bại</string>
    <string name="account_created_successfully">Tạo tài khoản thành công</string>
    <string name="please_select_your_profession">Vui lòng chọn nghề nghiệp của bạn</string>
    <string name="please_select_your_specialization">Vui lòng chọn chuyên khoa của bạn</string>
    <string name="please_select_your_gender">Vui lòng chọn giới tính của bạn</string>
    <string name="login">Đăng nhập</string>
    <string name="enter_your_details_to_get_started">Nhập thông tin của bạn để bắt đầu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="sign_up">Đăng ký</string>
    <string name="don_t_have_an_account">Chưa có tài khoản?</string>
    <string name="logged_in">Đã đăng nhập</string>
    <string name="send_reset_mail">Gửi email đặt lại</string>
    <string name="enter_your_registered_email_address">Nhập địa chỉ email đã đăng ký của bạn</string>
    <string name="upload_prescription">Tải lên đơn thuốc</string>
    <string name="upi_qr">Mã QR UPI</string>
    <string name="about_us">Về chúng tôi</string>
    <string name="feedback">Phản hồi</string>
    <string name="medical_test_data">Dữ liệu xét nghiệm y tế</string>
    <string name="enter_your_medical_test_data_to_get_tracked">Nhập dữ liệu xét nghiệm y tế của bạn để theo dõi</string>
    <string name="test_name">Tên xét nghiệm</string>
    <string name="test_name_hint">ví dụ: Huyết áp</string>
    <string name="test_result">Kết quả xét nghiệm</string>
    <string name="test_result_hint">ví dụ: 110</string>
    <string name="save_data">Lưu dữ liệu</string>
</resources>