<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    tools:context=".ui.mainFragments.stats.AddStatsDataFragment">

    <TextView
        android:id="@+id/nameDisplay"
        style="@style/DMSans_Bold_20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/medical_test_data"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/want_to_book_an_appointment"
        style="@style/DMSans_Medium_16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/enter_your_medical_test_data_to_get_tracked"
        android:textColor="@color/green_shade_light_2"
        app:layout_constraintStart_toStartOf="@+id/nameDisplay"
        app:layout_constraintTop_toBottomOf="@+id/nameDisplay" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/want_to_book_an_appointment">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/save_button"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.geekymusketeers.presin.ui.custom_views.CustomEditText
                    android:id="@+id/test_Name_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="20dp"
                    app:header="@string/test_name"
                    app:hint="@string/test_name_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.geekymusketeers.presin.ui.custom_views.CustomEditText
                    android:id="@+id/test_Result_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:header="@string/test_result"
                    app:hint="@string/test_result_hint"
                    app:inputType="2"
                    app:layout_constraintEnd_toEndOf="@+id/test_Name_edit_text"
                    app:layout_constraintStart_toStartOf="@+id/test_Name_edit_text"
                    app:layout_constraintTop_toBottomOf="@+id/test_Name_edit_text" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.geekymusketeers.presin.ui.custom_views.CustomButton
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            app:header="@string/save_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>